[package]
name = "metaros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
byteorder = "1.4.3"
lazy_static = "1.4.0"
chrono = "0.4.19"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.0.6", features = ["derive"] }
md4 = "0.10.0"
