[package]
name = "metaros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
byteorder = "1.4.3"
lazy_static = "1.4.0"
chrono = "0.4.19"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.0.6", features = ["derive"] }
loggerv = "0.7.2"
log = "0.4.14"
md4 = "0.10.0"
bitvec = "1.0.0"
des = "0.7.0"
cipher = "0.3.0"
block-modes = "0.8.1"
pbkdf2 = "0.10.0"
digest = "0.10.1"
hmac = "0.12.0"
sha1 = "0.10.0"
aes = "0.7.5"
